--- a/IrvingParkContactList/Views/Home/About.cshtml
+++ b/IrvingParkContactList/Views/Home/About.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>About the Irving Park Contact List</h2>
 
-<p>Use this area to provide additional information.</p>
+<p>
+    Contact Information for Residents of <a target="_blank" href="https://goo.gl/maps/YHhDi">Irving Park, Chicago IL</a>
+    <br/><br />
+    <a href="mailto:support@irvingparkcontactlist.com">support@irvingparkcontactlist.com</a>
+</p>
+
