--- a/IrvingParkContactList/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/IrvingParkContactList/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IrvingParkContactList.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Use another service to log in.</h4>
-<hr />
+@*<h4>Login using your Google</h4>
+<hr />*@
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
     if (loginProviders.Count() == 0) {
@@ -19,7 +19,9 @@
             <div id="socialLoginList">
                 <p>
                     @foreach (AuthenticationDescription p in loginProviders) {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                        <button type="submit" class="btn-empty" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">
+                            <img src="~/Content/images/@(p.AuthenticationType).png"/>
+                        </button>
                     }
                 </p>
             </div>
