write connection string out

--- a/IrvingParkContactList/Views/Home/About.cshtml
+++ b/IrvingParkContactList/Views/Home/About.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using System.Configuration
+@{
     ViewBag.Title = "About";
 }
 <h2>About the Irving Park Contact List</h2>
@@ -7,5 +8,6 @@
     Contact Information for Residents of <a target="_blank" href="https://goo.gl/maps/YHhDi">Irving Park, Chicago IL</a>
     <br/><br />
     <a href="mailto:support@irvingparkcontactlist.com">support@irvingparkcontactlist.com</a>
+    @ConfigurationManager.ConnectionStrings["DefaultConnection"]
 </p>
 
